# desmoslibs

./: README.md  main.py  pong.dscript  pyproject.toml
client/: __init__.py
dscript/: __init__.py  cpu.dscript  example.dscript  example_animation.dscript
